added pages and main vm

--- a/ListViewScrollIssue/MainPage.xaml
+++ b/ListViewScrollIssue/MainPage.xaml
@@ -3,9 +3,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    xmlns:vm="clr-namespace:ListViewScrollIssue.ViewModels"
+    xmlns:models="clr-namespace:ListViewScrollIssue.Models"
     x:Class="ListViewScrollIssue.MainPage"
+    x:DataType="vm:MainViewModel"
     ios:Page.UseSafeArea="True"
-    NavigationPage.IconColor="ForestGreen"
     x:Name="Page">
 
     <Grid
@@ -18,18 +20,35 @@
         <Label
             Text="Repro project to show ListView scrolling issue on iOS"
             HorizontalTextAlignment="Center"
-            FontSize="Header" />
+            FontSize="Header"
+            BackgroundColor="ForestGreen"
+            TextColor="White"/>
         <ListView
             Grid.Row="1"
             HorizontalOptions="FillAndExpand"
             VerticalOptions="FillAndExpand"
-            Background="GhostWhite"
+            Background="DeepSkyBlue"
             ItemsSource="{Binding TestModel}"
             Margin="0"
             IsGroupingEnabled="True">
             <ListView.GroupHeaderTemplate>
-                <DataTemplate x:DataType="models"
+                <DataTemplate x:DataType="models:ComponentListItemCollection">
+                    <ViewCell>
+                        <Grid BackgroundColor="White">
+                            <Label Text="{Binding SectionHeader}" FontSize="20" VerticalTextAlignment="Center"
+                                   Padding="8,0" Margin="0" TextColor="Black" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
             </ListView.GroupHeaderTemplate>
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:ComponentListItem">
+                    <TextCell
+                        Text="{Binding Name}"
+                        TextColor="White">
+                    </TextCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
     </Grid>
 </ContentPage>
